hphp/hack/test/typecheck/array_append_map_element.php.like_types.exp
File "array_append_map_element.php", line 5, characters 3-21:
Invalid assignment (Typing[4110])
File "array_append_map_element.php", line 4, characters 27-34:
Expected vec<int>
File "array_append_map_element.php", line 4, characters 15-35:
But got dynamic because it is an unenforceable type
